# ent

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Gopkg.toml  LICENSE  README.md  database.yml  docker_CHANGELOG.md  features.md  generated.go  go.mod  go.sum  models_gen.go  package-lock.json  resolver.go  schema.graphql
.github/testdata/: jest.config.js.example  schema1.json  schema2.json  user.ts.example  verify_graphql_schema.test.ts.example
.github/workflows/: codeql-analysis.yml  docs_build.yml  e2e.yml  go.yml  go_ci.yml  new_docker_image.yml  new_dockerfile_image.yml  node.js.yml  python.yml  python_ci.yml  update-docs.yml  validate-schema-gql
cmd/gent/: codegen_plugin.go  db_schema.go  db_schema_test.go  ent_codegen.go  ent_codegen_test.go  ent_graphql_resolver.gotmpl  ent_graphql_resolver.gotpl  ent_graphql_resolver_plugin.go  ent_graphql_server_plugin.go  field_types.go  file_writer.go  generate_schema.go  generate_schema_test.go  graphql_schema.go  graphql_schema_test.go  main.go  mutator.tmpl  node.tmpl  privacy.tmpl  schema.tmpl  template_file_writer.go  write_action.go  write_mutation_builder.go  yaml_file_writer.go
config/: Config.go  config.go
data/: data.go
docs/: docusaurus.config.js  package-lock.json  package.json
docs/.docusaurus/: client-modules.js  docusaurus.config.js  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/docs/: hello.md  intro.md  intro.mdx  postgres_query_users.txt  postgres_users.txt  sqlite_query_users.txt  sqlite_users.txt
ent/: action.go  cache.go  constants.go  constants.tmpl  edge.go  ent_codegen.go  ent_config.go  ent_test.go  entity.go  errors.go  generated_code_test.go  helpers_test.go  loader.go  loader_test.go  models.go  models_test.go  mutation_executor.go  mutator.tmpl  node.go  node.tmpl  operations.go  primitives.go  privacy.go  privacy_loading.go  privacy_loading_test.go  query.go  sql.go  sql_test.go  writes.go
ent/actions/: action.go  action_edge_test.go  action_mutator.go  action_observers_test.go  action_permissions_test.go  action_triggers_test.go  action_validators_test.go  actions_test.go  changesets.go  contact_action_test.go  data_op_test.go  edge_group_mutation_builder.go  edge_group_mutation_builder_test.go  event_action_test.go  generated_action_test.go  interface.go  (+7 more)
gent/: main.go
models/: constants.go  constants.tmpl  edge.go  ent_codegen.go  entity.go  loader.go  models.go  node.go  node.tmpl  node_type.go
python/: AGENTS.md  Pipfile
python/auto_schema/: CONTRIBUTING.MD  LICENSE  MANIFEST.in  README.MD  RELEASING.MD  clean.sh  gen_db_schema.py  pyproject.toml  release.sh  setup.py  ty.toml
python/auto_schema/auto_schema/: change.py  change_type.py  clause_text.py  clearable_string_io.py  command.py  compare.py  config.py  csv.py  diff.py  edge_comparator.py  edge_op.py  edge_renderer.py  env.py  introspection.py  ops.py  ops_impl.py  parse_db.py  renderers.py  runner.py  schema_item.py  script.py.mako
python/auto_schema/auto_schema/cli/: __init__.py
python/auto_schema/auto_schema/util/: os.py
python/auto_schema/tests/: command_test.py  conftest.py  dev_schema_runner_test.py  dev_schema_test.py  extensions_test.py  ops_sql_test.py  renderers_test.py  runner_test.py  testingutils.py
release_image/: main.go
server/: server.go
test_setup/: main.go
ts/: .dockerignore  .npmignore  .prettierignore  .prettierrc  .swcrc  CONTRIBUTING.MD  CONTRIBUTING.md  Dockerfile  Dockerfile.tmpl  RELEASING.MD  biome.json  jest.config.js  package-lock.json  package.json  postfile.txt  schema.ts  tsconfig.json
tsent/: main.go
validate-schema-gql/: main.go
(+1921 files in other folders)
