[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# auto_schema_test https://test.pypi.org/project/auto-schema-test/
# name = "auto_schema_test"
# version = "0.0.36"
# production https://pypi.org/project/auto-schema/
name = "auto_schema"
version = "0.0.34"
authors = [{ name = "Ola Okelola", email = "email@email.com" }]
description = "auto schema for a db"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "sqlalchemy==2.0.18",
  "alembic==1.12.0",
  "datetime==4.3",
  "psycopg2==2.9.6",
  "ruff==0.0.285",
  "python-dateutil==2.8.2",
]

[project.scripts]
auto_schema = "auto_schema.cli:main"

[project.urls]
"Homepage" = "https://github.com/lolopinto/ent/tree/main/python/auto_schema"
"Bug Tracker" = "https://github.com/lolopinto/ent/tree/main/python/auto_schema/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_schema*"]
exclude = ["tests*", "include*"]
