[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# auto_schema_test https://test.pypi.org/project/auto-schema-test/
# name = "auto_schema_test"
# version = "0.0.36"
# production https://pypi.org/project/auto-schema/
name = "auto_schema"
version = "0.0.35"
authors = [{ name = "Ola Okelola", email = "email@email.com" }]
description = "auto schema for a db"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "sqlalchemy==2.0.45",
  "alembic==1.12.0",
  "psycopg2==2.9.11",
  "ruff==0.0.285",
  # Alembic requires python-dateutil when timezone is configured for generated
  # revision timestamps. auto_schema sets timezone = "utc" in command.py.
  "python-dateutil==2.8.2",
]

[project.scripts]
auto_schema = "auto_schema.cli:main"

[project.urls]
"Homepage" = "https://github.com/lolopinto/ent/tree/main/python/auto_schema"
"Bug Tracker" = "https://github.com/lolopinto/ent/tree/main/python/auto_schema/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_schema*"]
exclude = ["tests*", "include*"]
